# CrossZero

./: .gitignore  .travis.yml  CMakeLists.txt  CMakeSettings.json  CrossZero.cbp  README.md  RoundedRectangleShape.cpp  ScreenManager.cpp  ScreenManager.hpp  button.cpp  button.hpp  colorscheme.hpp  effects.hpp  eventhandler.cpp  eventhandler.hpp  main.cpp  mainmenu.cpp  mainmenu.hpp  server.cpp  server.hpp  simple_particles.hpp  stdafx.hpp  timer.hpp
particles/: CMakeLists.txt  particle.hpp  particle.tcc  particle_container.hpp  particle_traits.hpp
project/CodeBlocks/: CrossZero.cbp
res/: icon.psd
server/: CMakeLists.txt  common_data.hpp  server.cpp  server.hpp  server_connection_mng.hpp  server_listener.hpp  server_protocol.hpp
server/detail/: CMakeLists.txt  message_decoder.hpp  server_interfaces.hpp  server_protocol.hpp  socket_container.hpp
src/: animation.cpp  animation.hpp  branding_screen.cpp  branding_screen.hpp  button.cpp  button.hpp  color_scheme.hpp  control.cpp  control.hpp  edit.cpp  edit.hpp  effects.hpp  field.cpp  field.hpp  gamerule.hpp  main.cpp  main_menu.cpp  main_menu.hpp  mouse_event.hpp  particle.hpp  particle_container.hpp  particle_traits.hpp  raster_rounded_rectangle.cpp  rounded_rectangle.cpp  screen.cpp  screen.hpp  settings_screen.cpp  settings_screen.hpp  shared_font.hpp  simple_particles.hpp  stdafx.hpp  ui.hpp
src/server/: common_data.hpp
src/server/detail/: message_decoder.hpp  server_protocol.hpp
src/tools/: math.hpp  random.cpp  random.hpp  timer.hpp
src/ui/: CMakeLists.txt  color_scheme.hpp  main_menu.cpp  main_menu.hpp  shared_font.hpp  ui.hpp
src/ui/controls/: button.hpp  control.cpp  control.hpp
src/ui/screens/: screen.cpp  screen.hpp
tools/: CMakeLists.txt  math.hpp  random.hpp
ui/: CMakeLists.txt  button.cpp  button.hpp  colorscheme.hpp  control.cpp  control.hpp
